--- a/assets/css/extended/extra.css
+++ b/assets/css/extended/extra.css
@@ -87,3 +87,83 @@ a:hover {
   filter: drop-shadow(0 0 8px #00ff4a) brightness(1.1);
   transform: scale(1.05);
 }
+
+.post-content img {
+  max-width: 100%;
+  height: auto;
+  display: block;
+  margin: 1rem auto;
+}
+
+/**
+ * Mobile Menu
+ * 
+ * This is a simple mobile menu that uses a checkbox to toggle the menu visibility.
+ * The hamburger icon is displayed when the screen width is less than 768px.
+ * 
+ * The menu items are hidden by default and are displayed when the checkbox is checked.
+ */
+.menu-toggle {
+  display: none;
+}
+
+.hamburger {
+  display: none;
+  font-size: 1.75rem;
+  cursor: pointer;
+  user-select: none;
+  padding-left: 1rem;
+  background: none;
+  border: none;
+}
+
+@media screen and (max-width: 768px) {
+
+  /*  .nav {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    position: relative;
+  }
+
+  .logo {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+  }
+
+  .logo-switches {
+    margin-left: auto;
+  }
+*/
+  .hamburger {
+    display: inline-block;
+    z-index: 1001;
+    /* position: relative; */
+  }
+
+  #menu {
+    display: none;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
+    inset: 0;
+    background-color: rgba(0, 0, 0, 0.6);
+    backdrop-filter: blur(8px);
+    -webkit-backdrop-filter: blur(8px);
+    padding: 2rem;
+    z-index: 1000;
+  }
+
+  .menu-toggle:checked~#menu {
+    display: flex;
+  }
+
+  #menu li {
+    margin: 1rem 0;
+    text-align: center;
+    font-size: 1.5rem;
+  }
+}
